feat: enhance Novu integration with diagnostics and workflow updates
- Introduced a comprehensive diagnostics function for Novu to monitor health and configuration issues.
- Updated package.json to include new diagnostic and scheduling commands for QStash.
- Refactored workflow IDs for better organization and added new mappings for legacy support.
- Removed outdated scripts related to Novu workflows setup and testing.
- Improved error handling and logging for Novu client initialization.
- Consolidated and standardized workflow configurations for better maintainability.

--- a/package.json
+++ b/package.json
@@ -44,20 +44,16 @@
     "test:posthog": "node -r dotenv/config scripts/test-posthog-connection.js",
     "test:posthog-env": "node -r dotenv/config scripts/test-env-visibility.js",
     "validate:posthog-permissions": "node -r dotenv/config scripts/validate-posthog-permissions.js",
-    "setup:novu-workflows": "node -r dotenv/config scripts/setup-novu-workflows.js",
-    "novu:workflows": "npm run setup:novu-workflows",
-    "test:novu": "node -r dotenv/config scripts/test-novu-connection.js",
-    "test:novu-permissions": "node -r dotenv/config scripts/test-novu-connection.js --permissions",
-    "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
-    "test:novu-workflow": "node -r dotenv/config scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
     "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:dev:sync": "node scripts/novu-dev-sync.js",
     "novu:sync:prod": "bash -c 'source .env && npx novu@latest sync --bridge-url \"https://eleva.care/api/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:clean": "node scripts/clean-novu-workflows.js",
-    "test:workflows": "node -r dotenv/config scripts/test-novu-workflows-with-data.js",
+    "novu:diagnostics": "node scripts/test-novu-diagnostics.js",
+    "qstash:schedule": "node scripts/qstash-manager.js schedule",
+    "qstash:list": "node scripts/qstash-manager.js list",
+    "qstash:cleanup": "node scripts/qstash-manager.js cleanup",
+    "qstash:stats": "node scripts/qstash-manager.js stats",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
