Add debug workflow and improve CI diagnostics
Introduces a new 'Debug CI Failures' workflow for enhanced troubleshooting of CI issues, including environment, Neon API, and dependency checks. Improves the Neon preview branch workflow with additional debug output and stricter branch creation steps. Updates the test workflow to ensure PNPM is installed if missing, improving reliability of dependency installation.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,14 @@ jobs:
           node-version: '20'
           cache: 'pnpm'
 
+      - name: 📦 Install PNPM if not available
+        run: |
+          if ! command -v pnpm &> /dev/null; then
+            echo "PNPM not found, installing..."
+            npm install -g pnpm@latest
+          fi
+          echo "PNPM version: $(pnpm --version)"
+
       - name: 📦 Get PNPM version
         id: pnpm-version
         run: echo "version=$(pnpm --version)" >> $GITHUB_OUTPUT
