--- a/.github/workflows/debug-ci-failure.yml
+++ b/.github/workflows/debug-ci-failure.yml
@@ -62,6 +62,7 @@ jobs:
   debug-neon:
     name: 🗄️ Debug Neon Configuration
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
