Update PNPM setup in CI and specify packageManager
Replaces manual PNPM installation in the GitHub Actions workflow with pnpm/action-setup, and adds the 'packageManager' field to package.json to specify PNPM version. This ensures consistent environment setup and dependency management.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,20 +25,15 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js and PNPM
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+
+      - name: 🔧 Setup Node.js
         id: setup
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-
-      - name: 📦 Install PNPM if not available
-        run: |
-          if ! command -v pnpm &> /dev/null; then
-            echo "PNPM not found, installing..."
-            npm install -g pnpm@latest
-          fi
-          echo "PNPM version: $(pnpm --version)"
 
       - name: 📦 Get PNPM version
         id: pnpm-version
