--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "@upstash/redis": "^1.34.8",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.3",
+    "@vercel/og": "^0.8.5",
     "@vercel/speed-insights": "^1.2.0",
     "@xstate/react": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -181,6 +182,7 @@
     "react-hook-form": "^7.56.1",
     "react-markdown": "^9.1.0",
     "resend": "^4.4.1",
+    "satori": "^0.16.2",
     "sharp": "^0.34.2",
     "sonner": "^2.0.3",
     "stripe": "^17.7.0",
