--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
+    "pnpm": "^10.17.1",
     "postgres": "^3.4.5",
     "posthog-js": "^1.236.7",
     "posthog-node": "^4.18.0",
@@ -230,6 +231,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-email": "^4.0.17",
+    "shadcn": "^3.2.1",
     "supertest": "^7.1.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.2",
