--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "svix": "^1.66.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.9.0",
     "use-server": "^0.4.9",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
