refactor: reorganize tests following proper Jest conventions
PROPER TEST ORGANIZATION:
✅ Move test scripts from /scripts to /tests folder
✅ Follow Jest best practices with describe() and test() blocks
✅ Use proper mocking patterns consistent with existing codebase
✅ Remove standalone Node.js scripts in favor of Jest tests

NEW TEST STRUCTURE:
📁 tests/lib/novu-workflow-fix.test.ts
- Tests payload structure fixes for user-lifecycle workflow
- Validates Clerk UserJSON property mapping (first_name vs firstName)
- Tests user segment detection (expert vs patient)
- Validates error prevention and fallback handling
- Simulates integration scenarios

📁 tests/integration/novu-workflow-execution.test.ts
- Integration tests that can optionally connect to real Novu API
- Set NOVU_INTEGRATION_TEST=true for live API testing
- Performance and error handling tests

PACKAGE.JSON UPDATES:
✅ Added test:novu command for focused Novu testing
✅ Added test:novu:integration for optional live API testing
✅ Removed problematic standalone test script

JEST BEST PRACTICES FOLLOWED:
- Proper describe() blocks for test organization
- beforeEach() setup and cleanup
- Consistent mocking patterns
- Clear test descriptions and assertions
- Integration with existing test infrastructure

REMOVED FILES:
❌ scripts/test-user-lifecycle-workflow.js (standalone script)
❌ Complex test files with mocking issues

The tests now properly validate the user-lifecycle workflow fix
and follow the project's established testing conventions.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "test:payment": "jest tests/api/create-payment-intent.test.ts --passWithNoTests",
     "test:scheduling": "jest tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
     "test:integration": "jest tests/integration",
+    "test:novu": "jest tests/lib/novu-workflow-fix.test.ts --passWithNoTests",
+    "test:novu:integration": "NOVU_INTEGRATION_TEST=true jest tests/integration/novu-workflow-execution.test.ts --passWithNoTests",
     "test:e2e": "jest tests/e2e",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
