--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "@vercel/og": "^0.8.5",
     "@vercel/speed-insights": "^1.2.0",
     "@xstate/react": "^5.0.3",
+    "botid": "^1.5.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "core-js": "^3.41.0",
