--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/core": "^3.1.0",
+    "@tiptap/core": "^3.6.2",
     "@tiptap/extension-bullet-list": "^3.1.0",
     "@tiptap/extension-color": "^3.1.0",
     "@tiptap/extension-highlight": "^3.1.0",
@@ -134,9 +134,10 @@
     "@tiptap/extension-text-style": "^3.1.0",
     "@tiptap/extension-typography": "^3.1.0",
     "@tiptap/extension-underline": "^3.1.0",
-    "@tiptap/pm": "^3.1.0",
-    "@tiptap/react": "^3.1.0",
-    "@tiptap/starter-kit": "^3.1.0",
+    "@tiptap/extensions": "^3.6.2",
+    "@tiptap/pm": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
     "@tiptap/static-renderer": "^3.1.0",
     "@types/lodash": "^4.17.16",
     "@types/mdx": "^2.0.13",
