--- a/package.json
+++ b/package.json
@@ -185,6 +185,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.1",
     "react-markdown": "^9.1.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.4.1",
     "satori": "^0.16.2",
     "sharp": "^0.34.2",
