Run tests on all pull requests
Updated the workflow to trigger on all pull requests, not just those targeting main or develop branches.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,7 @@ name: 🧪 Test Suite
 on:
   push:
     branches: [main, develop]
-  pull_request:
-    branches: [main, develop]
+  pull_request: # Runs on all PRs regardless of target branch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
