Improve blocked date conflict detection and refund handling
Enhanced appointment conflict logic to check both start and end times against blocked dates, ensuring conflicts are detected if an appointment spans a blocked date in the expert's timezone. Also refactored refund handling to map conflict reasons to explicit conflict types, improving clarity and maintainability.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,8 @@ name: 🧪 Test Suite
 on:
   push:
     branches: [main, develop]
-  pull_request: # Runs on all PRs regardless of target branch
+  pull_request:
+    branches: [main, develop]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
