--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main, develop]
 
+# Required permissions for creating issues on failure
+permissions:
+  contents: read
+  issues: write
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -47,6 +52,9 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -70,6 +78,9 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -92,6 +103,9 @@ jobs:
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
+
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -122,6 +136,9 @@ jobs:
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
+
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -171,6 +188,9 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -208,6 +228,9 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -240,6 +263,9 @@ jobs:
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
+
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
