--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "motion": "^12.23.24",
     "next": "15.4.7",
     "next-intl": "^4.4.0",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
     "pnpm": "^10.19.0",
