--- a/package.json
+++ b/package.json
@@ -174,7 +174,6 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
-    "pnpm": "^10.19.0",
     "postgres": "^3.4.7",
     "posthog-js": "^1.281.0",
     "posthog-node": "^4.18.0",
@@ -225,7 +224,7 @@
     "eslint-plugin-jsdoc": "^50.8.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "5.2.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
