--- a/package.json
+++ b/package.json
@@ -242,7 +242,8 @@
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "unified": "^11.0.5"
   },
   "overrides": {
     "punycode": "^2.3.1"
