Add Next.js 16 upgrade documentation and update configurations
- Introduced a quick reference guide for the Next.js 16 upgrade, detailing changes for developers and resources for troubleshooting.
- Added an implementation summary for the upgrade, outlining the transition from Next.js 15.4.7 to 16.0.1, including build command adjustments and performance improvements.
- Updated `next.config.ts` to remove deprecated MDX configuration and optimize memory usage for production builds.
- Enhanced `package.json` with new build scripts for webpack and analysis, and updated dependencies for React and Prettier.
- Removed unnecessary dynamic route declarations in various API routes, leveraging Next.js 16's default behavior for dynamic routing.
- Updated TypeScript configuration to include additional file types for better type checking.
- Improved caching strategies and revalidation settings across multiple routes to enhance performance and maintainability.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "dev": "NODE_NO_WARNINGS=1 next dev --port 3000",
     "build": "NODE_NO_WARNINGS=1 next build",
+    "build:webpack": "NODE_NO_WARNINGS=1 next build --webpack",
     "build:force": "NODE_NO_WARNINGS=1 NEXT_SKIP_TYPESCRIPT_CHECK=1 next build",
+    "build:analyze": "cross-env ANALYZE=true pnpm build",
+    "build:debug": "NODE_OPTIONS='--inspect' pnpm build",
+    "build:profile": "pnpm build --profile",
+    "build:memory": "pnpm build --experimental-debug-memory-usage",
     "start": "NODE_NO_WARNINGS=1 next start",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -59,10 +64,6 @@
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
-    "build:analyze": "cross-env ANALYZE=true pnpm build",
-    "build:debug": "NODE_OPTIONS='--inspect' pnpm build",
-    "build:profile": "pnpm build --profile",
-    "build:memory": "pnpm build --experimental-debug-memory-usage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -73,7 +74,6 @@
     "email:preview": "email dev --dir emails --port 3001"
   },
   "dependencies": {
-    "@clerk/elements": "^0.23.74",
     "@clerk/localizations": "^3.26.3",
     "@clerk/nextjs": "^6.34.0",
     "@clerk/themes": "^2.4.29",
@@ -85,8 +85,8 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/eslint-plugin-next": "15.4.7",
-    "@next/mdx": "^15.5.6",
+    "@next/eslint-plugin-next": "16.0.1",
+    "@next/mdx": "^16.0.1",
     "@novu/api": "^1.7.1",
     "@novu/framework": "^2.7.1",
     "@novu/nextjs": "^3.11.0",
@@ -160,7 +160,7 @@
     "drizzle-orm": "^0.35.3",
     "dub": "^0.61.15",
     "embla-carousel-react": "^8.6.0",
-    "eslint-config-next": "15.4.7",
+    "eslint-config-next": "16.0.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
@@ -169,7 +169,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.23.24",
-    "next": "15.4.7",
+    "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
@@ -177,11 +177,11 @@
     "postgres": "^3.4.7",
     "posthog-js": "^1.281.0",
     "posthog-node": "^4.18.0",
-    "react": "^19.2.0",
+    "react": "19.2.0",
     "react-confetti": "^6.4.0",
     "react-cookie-manager": "^3.8.2",
     "react-day-picker": "9.5.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "19.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.65.0",
     "react-markdown": "^9.1.0",
@@ -215,6 +215,7 @@
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "cross-env": "^7.0.3",
@@ -252,7 +253,10 @@
     "overrides": {
       "@types/react": "19.0.10",
       "@types/react-dom": "19.0.4",
-      "prismjs": "^1.30.0"
+      "react": "19.2.0",
+      "react-dom": "19.2.0",
+      "prismjs": "^1.30.0",
+      "prettier": "3.6.2"
     }
   },
   "lint-staged": {
