Refactor package.json scripts and update Services component
- Updated QStash-related scripts in package.json to improve organization and functionality, including renaming and restructuring commands for better clarity.
- Modified the Services component to enhance layout and responsiveness, adjusting class names and dimensions for improved user experience.
- Removed deprecated scripts related to welcome email backfill and QStash environment checks to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
     "studio": "drizzle-kit studio",
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts",
-    "migrate:profile-published": "tsx scripts/rename-profile-published.ts",
-    "qstash:setup": "node --input-type=module scripts/setup-qstash.js",
-    "qstash:check": "node --input-type=module scripts/check-qstash-env.js",
-    "qstash:debug": "node --input-type=module scripts/debug-env-loading.js",
-    "qstash:env": "node --input-type=module scripts/setup-env-vars.js",
-    "qstash:update": "tsx scripts/update-qstash-schedules.ts",
-    "fix-connect-payouts": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/fix-connect-payout-schedules.ts",
-    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts || echo 'QStash setup skipped'",
-    "cleanup:duplicates": "NODE_NO_WARNINGS=1 tsx scripts/cleanup-duplicate-reservations.ts",
-    "cleanup:cache": "node -r dotenv/config node_modules/.bin/tsx scripts/cleanup-payment-rate-limit-cache.ts",
-    "test:keep-alive": "node -r dotenv/config node_modules/.bin/tsx scripts/test-keep-alive-cache-cleanup.ts",
+    "qstash:check": "node scripts/utilities/check-qstash-env.js",
+    "qstash:schedule": "node scripts/utilities/qstash-manager.js schedule",
+    "qstash:list": "node scripts/utilities/qstash-manager.js list",
+    "qstash:cleanup": "node scripts/utilities/qstash-manager.js cleanup",
+    "qstash:stats": "node scripts/utilities/qstash-manager.js stats",
+    "qstash:update": "tsx scripts/utilities/update-qstash-schedules.ts",
+    "cache:clear-clerk": "tsx scripts/utilities/cache-manager.ts clear-clerk",
+    "cache:health": "tsx scripts/utilities/cache-manager.ts health",
+    "cache:stats": "tsx scripts/utilities/cache-manager.ts stats",
+    "env:debug": "node scripts/utilities/debug-env-loading.js",
+    "env:setup": "node scripts/utilities/setup-env-vars.js",
+    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/utilities/update-qstash-schedules.ts || echo 'QStash setup skipped'",
     "test": "jest",
     "test:critical": "jest tests/api/create-payment-intent.test.ts tests/api/webhooks/ tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
     "test:deprecated": "jest tests/deprecated/ --passWithNoTests",
@@ -46,10 +47,9 @@
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "prepare": "husky",
-    "setup:posthog-dashboards": "node -r dotenv/config scripts/setup-posthog-dashboards.js",
+    "setup:posthog-dashboards": "node scripts/utilities/setup-posthog-dashboards.js",
     "posthog:dashboards": "npm run setup:posthog-dashboards",
-    "test:posthog-env": "node -r dotenv/config scripts/test-env-visibility.js",
-    "validate:posthog-permissions": "node -r dotenv/config scripts/validate-posthog-permissions.js",
+    "posthog:validate-permissions": "node scripts/utilities/validate-posthog-permissions.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
     "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
@@ -57,10 +57,6 @@
     "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:diagnostics": "node scripts/test-novu-diagnostics.js",
     "test:security": "node scripts/test-enhanced-security.js",
-    "qstash:schedule": "node scripts/qstash-manager.js schedule",
-    "qstash:list": "node scripts/qstash-manager.js list",
-    "qstash:cleanup": "node scripts/qstash-manager.js cleanup",
-    "qstash:stats": "node scripts/qstash-manager.js stats",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
