--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "@vercel/blob": "^0.27.3",
     "@vercel/og": "^0.8.5",
     "@vercel/speed-insights": "^1.2.0",
+    "@workos-inc/authkit-nextjs": "^2.11.0",
     "@workos-inc/node": "^7.72.1",
     "@xstate/react": "^5.0.5",
     "botid": "^1.5.10",
