--- a/package.json
+++ b/package.json
@@ -108,10 +108,12 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/themes": "^3.2.1",
     "@react-email/components": "^0.0.35",
     "@react-email/render": "^1.4.0",
     "@stripe/react-stripe-js": "^3.10.0",
     "@stripe/stripe-js": "^6.1.0",
+    "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.8.0",
     "@tiptap/extension-bullet-list": "^3.8.0",
@@ -147,6 +149,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "@workos-inc/authkit-nextjs": "^2.11.0",
     "@workos-inc/node": "^7.72.1",
+    "@workos-inc/widgets": "^1.5.0",
     "@xstate/react": "^5.0.5",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
