--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.0.35",
     "@react-email/render": "^1.4.0",
+    "@sentry/nextjs": "^10.27.0",
     "@stripe/react-stripe-js": "^3.10.0",
     "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-table": "^8.21.3",
@@ -161,6 +162,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
     "googleapis": "^144.0.0",
+    "import-in-the-middle": "^2.0.0",
     "lenis": "^1.3.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
@@ -182,6 +184,7 @@
     "react-hook-form": "^7.65.0",
     "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
+    "require-in-the-middle": "^8.0.1",
     "resend": "^4.8.0",
     "satori": "^0.16.2",
     "sharp": "^0.34.4",
