--- a/package.json
+++ b/package.json
@@ -73,8 +73,6 @@
     "email:preview": "email dev --dir emails --port 3001"
   },
   "dependencies": {
-    "@clerk/themes": "^2.4.29",
-    "@clerk/types": "^4.95.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -140,7 +138,6 @@
     "@tiptap/static-renderer": "^3.8.0",
     "@types/lodash": "^4.17.20",
     "@types/mdx": "^2.0.13",
-    "@types/node-cron": "^3.0.11",
     "@upstash/qstash": "^2.8.4",
     "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
@@ -150,7 +147,6 @@
     "@workos-inc/authkit-nextjs": "^2.11.0",
     "@workos-inc/node": "^7.72.1",
     "@workos-inc/widgets": "^1.5.0",
-    "@xstate/react": "^5.0.5",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -160,12 +156,8 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.35.3",
-    "dub": "^0.61.15",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.1",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "globals": "^15.15.0",
     "googleapis": "^144.0.0",
     "lenis": "^1.3.13",
     "lodash": "^4.17.21",
@@ -188,21 +180,15 @@
     "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
     "resend": "^4.8.0",
-    "satori": "^0.16.2",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "stripe": "^17.7.0",
-    "svix": "^1.80.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.9.0",
-    "use-server": "^0.4.9",
-    "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.24.6"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.4.0",
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.38.0",
     "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^15.5.6",
@@ -232,21 +218,17 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.2",
-    "ngrok": "5.0.0-beta.2",
     "novu": "^2.7.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react-email": "^4.3.2",
     "shadcn": "^3.5.0",
-    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.18",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "unified": "^11.0.5"
+    "typescript": "^5.9.3"
   },
   "overrides": {
     "punycode": "^2.3.1"
