--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-email/components": "^0.0.35",
     "@react-email/render": "^1.4.0",
+    "@sentry/nextjs": "^10.29.0",
     "@stripe/react-stripe-js": "^3.10.0",
     "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-query": "^5.90.7",
@@ -158,6 +159,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.1",
     "googleapis": "^144.0.0",
+    "import-in-the-middle": "^2.0.0",
     "lenis": "^1.3.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
@@ -174,10 +176,10 @@
     "react-cookie-manager": "^3.8.2",
     "react-day-picker": "9.5.1",
     "react-dom": "19.2.0",
-    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.65.0",
     "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
+    "require-in-the-middle": "^8.0.1",
     "resend": "^4.8.0",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
