--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev:next": "NODE_NO_WARNINGS=1 next dev --port 3000",
     "dev:only": "NODE_NO_WARNINGS=1 next dev --port 3000",
     "build": "NODE_NO_WARNINGS=1 next build",
-    "build:webpack": "NODE_NO_WARNINGS=1 next build --webpack",
     "build:force": "NODE_NO_WARNINGS=1 NEXT_SKIP_TYPESCRIPT_CHECK=1 next build",
     "build:analyze": "cross-env ANALYZE=true pnpm build",
     "build:debug": "NODE_OPTIONS='--inspect' pnpm build",
@@ -18,12 +17,6 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "generate": "drizzle-kit generate",
-    "migrate": "drizzle-kit migrate",
-    "push": "drizzle-kit push",
-    "studio": "drizzle-kit studio",
-    "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
-    "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts",
     "qstash:dev": "npx @upstash/qstash-cli@latest dev",
     "qstash:check": "node scripts/utilities/check-qstash-env.js",
     "qstash:schedule": "node scripts/utilities/qstash-manager.js schedule",
@@ -86,7 +79,6 @@
     "@novu/framework": "^2.7.1",
     "@novu/nextjs": "^3.11.0",
     "@novu/react": "^3.11.0",
-    "@paralleldrive/cuid2": "^2.3.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -97,21 +89,17 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.2.1",
     "@react-email/components": "^0.0.35",
     "@react-email/render": "^1.4.0",
     "@sentry/nextjs": "^10.29.0",
-    "@stripe/react-stripe-js": "^3.10.0",
-    "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.8.0",
@@ -137,7 +125,6 @@
     "@tiptap/react": "^3.8.0",
     "@tiptap/starter-kit": "^3.8.0",
     "@tiptap/static-renderer": "^3.8.0",
-    "@types/lodash": "^4.17.20",
     "@types/mdx": "^2.0.13",
     "@upstash/qstash": "^2.8.4",
     "@upstash/redis": "^1.35.6",
@@ -160,7 +147,6 @@
     "eslint-config-next": "16.0.1",
     "googleapis": "^144.0.0",
     "lenis": "^1.3.13",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
@@ -183,7 +169,6 @@
     "sonner": "^2.0.7",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.9.0",
     "zod": "^3.25.76"
   },
@@ -204,6 +189,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "babel-plugin-react-compiler": "^1.0.0",
+    "baseline-browser-mapping": "^2.9.5",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.26.2",
