chore: Organize package.json scripts for better clarity and structure
- Added section headers to categorize scripts in package.json, improving readability and organization.
- Grouped scripts into categories: DEVELOPMENT, BUILD & PRODUCTION, CODE QUALITY, DATABASE, TESTING, QSTASH, CACHE, NOTIFICATIONS, EMAIL, and ANALYTICS.
- Retained existing scripts while enhancing the overall structure for easier navigation.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "packageManager": "pnpm@9.2.0",
   "scripts": {
+    "// ========== DEVELOPMENT ==========": "",
     "dev": "concurrently --kill-others --names \"NEXT,QSTASH\" --prefix-colors \"cyan,magenta\" \"pnpm dev:next\" \"pnpm qstash:dev\"",
     "dev:next": "NODE_NO_WARNINGS=1 next dev --port 3000",
     "dev:only": "NODE_NO_WARNINGS=1 next dev --port 3000",
+    "// ========== BUILD & PRODUCTION ==========": "",
     "build": "NODE_NO_WARNINGS=1 next build",
     "build:force": "NODE_NO_WARNINGS=1 NEXT_SKIP_TYPESCRIPT_CHECK=1 next build",
     "build:analyze": "cross-env ANALYZE=true pnpm build",
@@ -14,9 +16,32 @@
     "build:profile": "pnpm build --profile",
     "build:memory": "pnpm build --experimental-debug-memory-usage",
     "start": "NODE_NO_WARNINGS=1 next start",
+    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/utilities/update-qstash-schedules.ts || echo 'QStash setup skipped'",
+    "// ========== CODE QUALITY ==========": "",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "// ========== DATABASE (Drizzle ORM) ==========": "",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "// ========== TESTING ==========": "",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:critical": "jest tests/api/create-payment-intent.test.ts tests/api/webhooks/ tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "jest tests/e2e",
+    "test:webhooks": "jest tests/api/webhooks/ --passWithNoTests",
+    "test:payment": "jest tests/api/create-payment-intent.test.ts --passWithNoTests",
+    "test:scheduling": "jest tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
+    "test:novu": "jest tests/lib/novu-workflow-fix.test.ts --passWithNoTests",
+    "test:novu:integration": "NOVU_INTEGRATION_TEST=true jest tests/integration/novu-workflow-execution.test.ts --passWithNoTests",
+    "test:deprecated": "jest tests/deprecated/ --passWithNoTests",
+    "test:security": "node scripts/test-enhanced-security.js",
+    "test:email": "tsx scripts/test-email-templates.mjs",
+    "// ========== QSTASH (Cron Jobs) ==========": "",
     "qstash:dev": "npx @upstash/qstash-cli@latest dev",
     "qstash:check": "node scripts/utilities/check-qstash-env.js",
     "qstash:schedule": "node scripts/utilities/qstash-manager.js schedule",
@@ -24,46 +49,33 @@
     "qstash:cleanup": "node scripts/utilities/qstash-manager.js cleanup",
     "qstash:stats": "node scripts/utilities/qstash-manager.js stats",
     "qstash:update": "tsx scripts/utilities/update-qstash-schedules.ts",
+    "// ========== CACHE (Redis) ==========": "",
     "cache:clear-clerk": "tsx scripts/utilities/cache-manager.ts clear-clerk",
     "cache:health": "tsx scripts/utilities/cache-manager.ts health",
     "cache:stats": "tsx scripts/utilities/cache-manager.ts stats",
-    "env:debug": "node scripts/utilities/debug-env-loading.js",
-    "env:setup": "node scripts/utilities/setup-env-vars.js",
-    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/utilities/update-qstash-schedules.ts || echo 'QStash setup skipped'",
-    "test": "jest",
-    "test:critical": "jest tests/api/create-payment-intent.test.ts tests/api/webhooks/ tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
-    "test:deprecated": "jest tests/deprecated/ --passWithNoTests",
-    "test:webhooks": "jest tests/api/webhooks/ --passWithNoTests",
-    "test:payment": "jest tests/api/create-payment-intent.test.ts --passWithNoTests",
-    "test:scheduling": "jest tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
-    "test:integration": "jest tests/integration",
-    "test:novu": "jest tests/lib/novu-workflow-fix.test.ts --passWithNoTests",
-    "test:novu:integration": "NOVU_INTEGRATION_TEST=true jest tests/integration/novu-workflow-execution.test.ts --passWithNoTests",
-    "test:e2e": "jest tests/e2e",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "prepare": "husky",
-    "setup:posthog-dashboards": "node scripts/utilities/setup-posthog-dashboards.js",
-    "posthog:dashboards": "npm run setup:posthog-dashboards",
-    "posthog:validate-permissions": "node scripts/utilities/validate-posthog-permissions.js",
+    "// ========== NOTIFICATIONS (Novu) ==========": "",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
     "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:prod": "bash -c 'source .env && npx novu@latest sync --bridge-url \"https://eleva.care/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:diagnostics": "node scripts/test-novu-diagnostics.js",
-    "test:security": "node scripts/test-enhanced-security.js",
+    "// ========== EMAIL (React Email) ==========": "",
+    "email:dev": "email dev",
+    "email:preview": "email dev --dir emails --port 3001",
+    "email:export": "email export --dir emails --outDir ./.react-email",
+    "// ========== ANALYTICS (PostHog & Bundle) ==========": "",
+    "posthog:dashboards": "npm run setup:posthog-dashboards",
+    "posthog:validate-permissions": "node scripts/utilities/validate-posthog-permissions.js",
+    "setup:posthog-dashboards": "node scripts/utilities/setup-posthog-dashboards.js",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "type-check": "tsc --noEmit",
-    "test:email": "tsx scripts/test-email-templates.mjs",
-    "email:dev": "email dev",
-    "email:export": "email export --dir emails --outDir ./.react-email",
-    "email:preview": "email dev --dir emails --port 3001"
+    "// ========== ENVIRONMENT ==========": "",
+    "env:debug": "node scripts/utilities/debug-env-loading.js",
+    "env:setup": "node scripts/utilities/setup-env-vars.js",
+    "// ========== HOOKS ==========": "",
+    "prepare": "husky"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
