--- a/package.json
+++ b/package.json
@@ -78,19 +78,19 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^3.10.0",
-    "@mdx-js/loader": "^3.1.1",
-    "@mdx-js/react": "^3.1.1",
+    "// ===== CORE FRAMEWORK (React 19 + Next.js 16) =====": "",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "next": "16.0.1",
+    "// ===== AUTHENTICATION (WorkOS AuthKit) =====": "",
+    "@workos-inc/authkit-nextjs": "^2.11.0",
+    "@workos-inc/node": "^7.72.1",
+    "@workos-inc/widgets": "^1.5.0",
+    "// ===== DATABASE (Neon + Drizzle ORM) =====": "",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/eslint-plugin-next": "16.0.1",
-    "@next/mdx": "^16.0.1",
-    "@novu/api": "^1.7.1",
-    "@novu/framework": "^2.7.1",
-    "@novu/nextjs": "^3.11.0",
-    "@novu/react": "^3.11.0",
+    "drizzle-orm": "^0.35.3",
+    "postgres": "^3.4.7",
+    "// ===== UI COMPONENTS - Radix Primitives (Shadcn base) =====": "",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -109,12 +109,19 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.2.1",
-    "@react-email/components": "^0.0.35",
-    "@react-email/render": "^1.4.0",
-    "@sentry/nextjs": "^10.29.0",
-    "@tanstack/react-query": "^5.90.7",
-    "@tanstack/react-table": "^8.21.3",
+    "// ===== UI UTILITIES (Styling helpers) =====": "",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0",
+    "lucide-react": "^0.453.0",
+    "sonner": "^2.0.7",
+    "// ===== RICH TEXT EDITOR (TipTap) =====": "",
     "@tiptap/core": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/pm": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
+    "@tiptap/extensions": "^3.8.0",
+    "@tiptap/static-renderer": "^3.8.0",
     "@tiptap/extension-bullet-list": "^3.8.0",
     "@tiptap/extension-color": "^3.8.0",
     "@tiptap/extension-highlight": "^3.8.0",
@@ -132,100 +139,126 @@
     "@tiptap/extension-text-style": "^3.8.0",
     "@tiptap/extension-typography": "^3.8.0",
     "@tiptap/extension-underline": "^3.8.0",
-    "@tiptap/extensions": "^3.8.0",
-    "@tiptap/pm": "^3.8.0",
-    "@tiptap/react": "^3.8.0",
-    "@tiptap/starter-kit": "^3.8.0",
-    "@tiptap/static-renderer": "^3.8.0",
-    "@types/mdx": "^2.0.13",
-    "@upstash/qstash": "^2.8.4",
-    "@upstash/redis": "^1.35.6",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/blob": "^0.27.3",
-    "@vercel/og": "^0.8.5",
-    "@vercel/speed-insights": "^1.2.0",
-    "@workos-inc/authkit-nextjs": "^2.11.0",
-    "@workos-inc/node": "^7.72.1",
-    "@workos-inc/widgets": "^1.5.0",
-    "botid": "^1.5.10",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cron-validator": "^1.4.0",
+    "tiptap-markdown": "^0.9.0",
+    "// ===== FORMS & VALIDATION =====": "",
+    "react-hook-form": "^7.65.0",
+    "@hookform/resolvers": "^3.10.0",
+    "zod": "^3.25.76",
+    "// ===== DATA TABLES & STATE =====": "",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-query": "^5.90.7",
+    "nuqs": "^2.7.2",
+    "// ===== DRAG & DROP =====": "",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "// ===== DATE & TIME =====": "",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.35.3",
-    "embla-carousel-react": "^8.6.0",
-    "eslint-config-next": "16.0.1",
-    "googleapis": "^144.0.0",
-    "lenis": "^1.3.13",
-    "lucide-react": "^0.453.0",
+    "react-day-picker": "9.5.1",
+    "cron-validator": "^1.4.0",
+    "// ===== ANIMATION & EFFECTS =====": "",
     "motion": "^12.23.24",
-    "next": "16.0.1",
-    "next-intl": "^4.5.2",
-    "next-themes": "^0.4.6",
-    "nuqs": "^2.7.2",
-    "postgres": "^3.4.7",
+    "lenis": "^1.3.13",
+    "react-confetti": "^6.4.0",
+    "embla-carousel-react": "^8.6.0",
+    "// ===== NOTIFICATIONS (Novu) =====": "",
+    "@novu/api": "^1.7.1",
+    "@novu/framework": "^2.7.1",
+    "@novu/nextjs": "^3.11.0",
+    "@novu/react": "^3.11.0",
+    "// ===== EMAIL (React Email + Resend) =====": "",
+    "@react-email/components": "^0.0.35",
+    "@react-email/render": "^1.4.0",
+    "resend": "^4.8.0",
+    "// ===== PAYMENTS (Stripe) =====": "",
+    "stripe": "^17.7.0",
+    "// ===== ANALYTICS & MONITORING =====": "",
+    "@sentry/nextjs": "^10.29.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "posthog-js": "^1.281.0",
     "posthog-node": "^4.18.0",
-    "react": "19.2.0",
-    "react-confetti": "^6.4.0",
-    "react-cookie-manager": "^3.8.2",
-    "react-day-picker": "9.5.1",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.65.0",
+    "// ===== MDX & CONTENT =====": "",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.1",
+    "@types/mdx": "^2.0.13",
     "react-markdown": "^9.1.0",
     "remark-gfm": "^4.0.1",
-    "resend": "^4.8.0",
+    "// ===== CACHING & QUEUE (Upstash) =====": "",
+    "@upstash/qstash": "^2.8.4",
+    "@upstash/redis": "^1.35.6",
+    "// ===== VERCEL SERVICES =====": "",
+    "@vercel/blob": "^0.27.3",
+    "@vercel/og": "^0.8.5",
+    "// ===== INTERNATIONALIZATION =====": "",
+    "next-intl": "^4.5.2",
+    "// ===== UTILITIES =====": "",
+    "botid": "^1.5.10",
+    "dotenv": "^16.6.1",
+    "googleapis": "^144.0.0",
+    "next-themes": "^0.4.6",
+    "react-cookie-manager": "^3.8.2",
     "sharp": "^0.34.4",
-    "sonner": "^2.0.7",
-    "stripe": "^17.7.0",
-    "tailwind-merge": "^2.6.0",
-    "tiptap-markdown": "^0.9.0",
-    "zod": "^3.25.76"
+    "// ===== ESLINT (Runtime) =====": "",
+    "@next/eslint-plugin-next": "16.0.1",
+    "eslint-config-next": "16.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@jest/globals": "^29.7.0",
-    "@next/bundle-analyzer": "^15.5.6",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jest": "^29.5.14",
+    "// ===== TYPESCRIPT =====": "",
+    "typescript": "^5.9.3",
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/jest": "^29.5.14",
+    "// ===== TESTING (Jest + Testing Library) =====": "",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@jest/globals": "^29.7.0",
+    "ts-jest": "^29.4.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "// ===== ESLINT =====": "",
+    "eslint": "^9.38.0",
+    "@eslint/js": "^9.38.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "baseline-browser-mapping": "^2.9.5",
-    "concurrently": "^9.2.1",
-    "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.26.2",
-    "eslint": "^9.38.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-jsdoc": "^50.8.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.5.2",
-    "novu": "^2.7.0",
-    "postcss": "^8.5.6",
+    "// ===== PRETTIER =====": "",
     "prettier": "^3.6.2",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "react-email": "^4.3.2",
-    "shadcn": "^3.5.0",
+    "// ===== TAILWINDCSS =====": "",
     "tailwindcss": "^3.4.18",
-    "ts-jest": "^29.4.5",
-    "ts-node": "^10.9.2",
+    "postcss": "^8.5.6",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
+    "// ===== BUILD TOOLS =====": "",
+    "concurrently": "^9.2.1",
+    "cross-env": "^7.0.3",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2",
+    "@next/bundle-analyzer": "^15.5.6",
+    "// ===== DATABASE (Drizzle Kit CLI) =====": "",
+    "drizzle-kit": "^0.26.2",
+    "// ===== GIT HOOKS =====": "",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "// ===== COMPONENT TOOLS =====": "",
+    "shadcn": "^3.5.0",
+    "// ===== EMAIL DEV =====": "",
+    "react-email": "^4.3.2",
+    "novu": "^2.7.0",
+    "// ===== REACT COMPILER (Experimental) =====": "",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "// ===== BROWSER COMPATIBILITY =====": "",
+    "baseline-browser-mapping": "^2.9.5"
   },
   "overrides": {
     "punycode": "^2.3.1"
