--- a/package.json
+++ b/package.json
@@ -78,15 +78,19 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1",
-    "@workos-inc/authkit-nextjs": "^2.11.0",
-    "@workos-inc/node": "^7.72.1",
-    "@workos-inc/widgets": "^1.5.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^3.10.0",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@neondatabase/serverless": "^0.10.4",
-    "drizzle-orm": "^0.35.3",
-    "postgres": "^3.4.7",
+    "@next/eslint-plugin-next": "16.0.1",
+    "@next/mdx": "^16.0.1",
+    "@novu/api": "^1.7.1",
+    "@novu/framework": "^2.7.1",
+    "@novu/nextjs": "^3.11.0",
+    "@novu/react": "^3.11.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -105,17 +109,12 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.2.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.0",
-    "lucide-react": "^0.453.0",
-    "sonner": "^2.0.7",
+    "@react-email/components": "^0.0.35",
+    "@react-email/render": "^1.4.0",
+    "@sentry/nextjs": "^10.29.0",
+    "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.8.0",
-    "@tiptap/react": "^3.8.0",
-    "@tiptap/pm": "^3.8.0",
-    "@tiptap/starter-kit": "^3.8.0",
-    "@tiptap/extensions": "^3.8.0",
-    "@tiptap/static-renderer": "^3.8.0",
     "@tiptap/extension-bullet-list": "^3.8.0",
     "@tiptap/extension-color": "^3.8.0",
     "@tiptap/extension-highlight": "^3.8.0",
@@ -133,56 +132,57 @@
     "@tiptap/extension-text-style": "^3.8.0",
     "@tiptap/extension-typography": "^3.8.0",
     "@tiptap/extension-underline": "^3.8.0",
-    "tiptap-markdown": "^0.9.0",
-    "react-hook-form": "^7.65.0",
-    "@hookform/resolvers": "^3.10.0",
-    "zod": "^3.25.76",
-    "@tanstack/react-table": "^8.21.3",
-    "@tanstack/react-query": "^5.90.7",
-    "nuqs": "^2.7.2",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.2.0",
-    "react-day-picker": "9.5.1",
-    "cron-validator": "^1.4.0",
-    "motion": "^12.23.24",
-    "lenis": "^1.3.13",
-    "react-confetti": "^6.4.0",
-    "embla-carousel-react": "^8.6.0",
-    "@novu/api": "^1.7.1",
-    "@novu/framework": "^2.7.1",
-    "@novu/nextjs": "^3.11.0",
-    "@novu/react": "^3.11.0",
-    "@react-email/components": "^0.0.35",
-    "@react-email/render": "^1.4.0",
-    "resend": "^4.8.0",
-    "stripe": "^17.7.0",
-    "@sentry/nextjs": "^10.29.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "posthog-js": "^1.281.0",
-    "posthog-node": "^4.18.0",
-    "@mdx-js/loader": "^3.1.1",
-    "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^16.0.1",
+    "@tiptap/extensions": "^3.8.0",
+    "@tiptap/pm": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
+    "@tiptap/static-renderer": "^3.8.0",
     "@types/mdx": "^2.0.13",
-    "react-markdown": "^9.1.0",
-    "remark-gfm": "^4.0.1",
     "@upstash/qstash": "^2.8.4",
     "@upstash/redis": "^1.35.6",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.3",
     "@vercel/og": "^0.8.5",
-    "next-intl": "^4.5.2",
+    "@vercel/speed-insights": "^1.2.0",
+    "@workos-inc/authkit-nextjs": "^2.11.0",
+    "@workos-inc/node": "^7.72.1",
+    "@workos-inc/widgets": "^1.5.0",
     "botid": "^1.5.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cron-validator": "^1.4.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.35.3",
+    "embla-carousel-react": "^8.6.0",
+    "eslint-config-next": "16.0.1",
     "googleapis": "^144.0.0",
+    "lenis": "^1.3.13",
+    "lucide-react": "^0.453.0",
+    "motion": "^12.23.24",
+    "next": "16.0.8",
+    "next-intl": "^4.5.2",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.2",
+    "postgres": "^3.4.7",
+    "posthog-js": "^1.281.0",
+    "posthog-node": "^4.18.0",
+    "react": "19.2.0",
+    "react-confetti": "^6.4.0",
     "react-cookie-manager": "^3.8.2",
+    "react-day-picker": "9.5.1",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-markdown": "^9.1.0",
+    "remark-gfm": "^4.0.1",
+    "resend": "^4.8.0",
     "sharp": "^0.34.4",
-    "@next/eslint-plugin-next": "16.0.1",
-    "eslint-config-next": "16.0.1"
+    "sonner": "^2.0.7",
+    "stripe": "^17.7.0",
+    "tailwind-merge": "^2.6.0",
+    "tiptap-markdown": "^0.9.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
