--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.9.0",
     "use-server": "^0.4.9",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
   },
