--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "lenis": "^1.3.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
+    "markdown-it-mark": "^4.0.0",
     "motion": "^12.23.24",
     "next": "16.0.7",
     "next-intl": "^4.4.0",
