--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
